--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.5.2",
     "react-apollo": "^2.2.2",
     "react-dom": "^16.5.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0"
   },
   "scripts": {
@@ -22,6 +23,7 @@
     "@types/node": "^10.11.2",
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.8",
+    "@types/react-router-dom": "^4.3.1",
     "typescript": "^3.1.1"
   }
 }
